[package]
name = "reddsa"
version = "0.1.0"
edition = "2018"
readme = "README.md"
license = "MIT OR Apache-2.0"
categories = ["cryptography"]
keywords = ["cryptography", "crypto", "zcash"]
description = "A standalone implementation of the PallasDSA signature scheme."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake2b_simd = { version = "0.5", default-features = false }
ff = { version = "0.11", default-features = false }
group = { version = "0.11", default-features = false }
serde = { version = "1", optional = true, features = ["derive"] }
rand_core = { version = "0.5", default-features = false }
pasta_curves = { git = "https://github.com/jarys/pasta_curves.git", branch = "alloc", default-features = false }

# std dependencies
thiserror = { version = "1.0", default-features = false, optional = true }

[features]
std = ["thiserror", "rand_core/std"]